--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,48 @@
+html, body {
+    height: 100%; /* Asegura que el body y html ocupen toda la altura */
+    margin: 0; /* Elimina el margen predeterminado */
+    padding: 0; /* Elimina el padding predeterminado */
+}
+
 body {
     font-family: Arial, sans-serif;
     padding: 20px;
-    background-color: #f4f4f4;
+    background: linear-gradient(135deg, #0f0c29, #302b63, #24243e); /* Degradado oscuro */
+    color: white; /* Texto blanco para contrastar con el fondo oscuro */
+    min-height: 100vh; /* Asegura que el body ocupe al menos toda la altura de la ventana */
+	margin: 0;
+}
+
+
+#particles {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1; /* Coloca las partículas detrás del contenido */
+    pointer-events: none; /* Permite interactuar con el contenido de la página */
+}
+
+
+.particle {
+    position: absolute;
+    width: 2px;
+    height: 2px;
+    background-color: rgba(255, 255, 255, 0.7); /* Color de las partículas */
+    border-radius: 50%;
+    animation: float 5s infinite ease-in-out;
+}
+
+@keyframes float {
+    0% {
+        transform: translateY(0) translateX(0);
+        opacity: 1;
+    }
+    100% {
+        transform: translateY(-100vh) translateX(100vw);
+        opacity: 0;
+    }
 }
 
 #searchContainer {
@@ -14,8 +55,10 @@ body {
 #searchInput {
     width: 300px;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #555;
     border-radius: 4px;
+    background-color: #333;
+    color: white;
 }
 
 #searchButton {
@@ -33,8 +76,10 @@ body {
 
 #typeSelector {
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #555;
     border-radius: 4px;
+    background-color: #333;
+    color: white;
 }
 
 #results {
@@ -48,10 +93,11 @@ body {
     text-align: center;
     flex: 1 1 150px;
     max-width: 150px;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.1); /* Fondo semi-transparente */
     padding: 10px;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    color: white;
 }
 
 .result-item img {
@@ -67,7 +113,7 @@ body {
 
 .result-item p {
     font-size: 14px;
-    color: #555;
+    color: #ccc;
 }
 
 #player {
@@ -75,9 +121,10 @@ body {
     height: 450px;
     margin: 0 auto;
     padding: 20px;
-    border: 1px solid #ccc;
+    border: 1px solid #555;
     box-sizing: border-box;
     display: none;
+    background-color: rgba(0, 0, 0, 0.5); /* Fondo semi-transparente */
 }
 
 #episodeControls {
@@ -91,5 +138,5 @@ body {
 #imdbIdDisplay {
     margin-top: 20px;
     font-size: 14px;
-    color: #333;
+    color: #ccc;
 }
